--- a/style/styles.css
+++ b/style/styles.css
@@ -54,6 +54,23 @@ body {
     background: linear-gradient(#2d210b, #000); /* Standard syntax */
 }
 
+#sun, #overSun {
+	background-color: #fffcda;
+    opacity: 0.9;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    box-shadow: 0px 0px 15px white;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    z-index: -1;
+}
+
+#overSun {
+	z-index:5;
+}
+
 #sentence {
 	width:100%;
 	height:200px;
@@ -80,23 +97,13 @@ body {
 
 .marquee.moveLeft span {
     display: inline-block;
-    padding-left: 100%;
+    /*padding-left: 100%;*/
     text-indent: 0;
     animation: marqueeLeft 120s linear infinite;
-}
-.marquee.moveRight span {
-    display: inline-block;
-    padding-right: 100%;
-    text-indent: 0;
-    animation: marqueeRight 120s linear infinite;
 }
 
 /* Make it move */
 @keyframes marqueeLeft {
     0%   { transform: translate(0, 0); }
     100% { transform: translate(-100%, 0); }
-}
-@keyframes marqueeRight {
-    0%   { transform: translate(0, 0); }
-    100% { transform: translate(100%, 0); }
 }
