--- a/style/styles.css
+++ b/style/styles.css
@@ -1,5 +1,5 @@
 html { height:100%; }
-body {
+body.day {
 	height:100%;
 	background: #54adff; /* For browsers that do not support gradients */
     background: -webkit-linear-gradient(#a7d3fc, #54adff); /* For Safari 5.1 to 6.0 */
@@ -7,6 +7,23 @@ body {
     background: -moz-linear-gradient(#a7d3fc, #54adff); /* For Firefox 3.6 to 15 */
     background: linear-gradient(#a7d3fc, #54adff); /* Standard syntax */
     font-family: Arial;
+    overflow:hidden;
+}
+
+body.sunset {
+	background: #0B486B; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#0B486B, #F56217 20%); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#0B486B, #F56217 20%); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#0B486B, #F56217 20%); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#0B486B, #F56217 20%); /* Standard syntax */
+}
+
+body.night {
+	background: #0B486B; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#0B486B, #F56217); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#0B486B, #F56217); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#0B486B, #F56217); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#0B486B, #F56217); /* Standard syntax */
 }
 
 #outro {
@@ -16,9 +33,10 @@ body {
 	width:100%;
 	height:100%;
 	background-color:black;
+	z-index:99;
 }
 
-#tree {
+.tree {
 	height:800px;
 	width:100%;
 	transform: rotate(180deg);
@@ -54,7 +72,7 @@ body {
     background: linear-gradient(#2d210b, #000); /* Standard syntax */
 }
 
-#sun, #overSun {
+#sun.day, #overSun.day {
 	background-color: #fffcda;
     opacity: 0.9;
     border-radius: 50%;
@@ -66,6 +84,8 @@ body {
     right: 50px;
     z-index: -1;
 }
+
+#sun.sunset, #sun.night, #overSun.sunset, #overSun.night { display: none; }
 
 #overSun {
 	z-index:5;
