--- a/style/styles.css
+++ b/style/styles.css
@@ -16,6 +16,7 @@ body.sunset {
     background: -o-linear-gradient(#0B486B, #F56217 20%); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(#0B486B, #F56217 20%); /* For Firefox 3.6 to 15 */
     background: linear-gradient(#0B486B, #F56217 20%); /* Standard syntax */
+    overflow:hidden;
 }
 
 body.night {
@@ -24,6 +25,7 @@ body.night {
     background: -o-linear-gradient(#0B486B, #F56217); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(#0B486B, #F56217); /* For Firefox 3.6 to 15 */
     background: linear-gradient(#0B486B, #F56217); /* Standard syntax */
+    overflow:hidden;
 }
 
 #outro {
@@ -85,7 +87,20 @@ body.night {
     z-index: -1;
 }
 
-#sun.sunset, #sun.night, #overSun.sunset, #overSun.night { display: none; }
+#sun.sunset, #overSun.sunset, { display: none; }
+
+#sun.night, #overSun.night {
+	background-color: #fff;
+    opacity: 0.6;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    box-shadow: 0px 0px 15px white;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    z-index: -1;
+}
 
 #overSun {
 	z-index:5;
